--- a/aml_batch_endpoint/endpoint_2/cloud/deployment.yml
+++ b/aml_batch_endpoint/endpoint_2/cloud/deployment.yml
@@ -1,7 +1,7 @@
 $schema: https://azuremlschemas.azureedge.net/latest/batchDeployment.schema.json
 name: blue
-endpoint_name: endpoint-batch-mlflow-1
-model: azureml:model-batch-mlflow-1@latest
+endpoint_name: endpoint-batch-2
+model: azureml:model-batch-2@latest
 compute: azureml:cluster-cpu
 mini_batch_size: 10
 output_file_name: predictions_pytorch.csv
