--- a/aml_batch_endpoint/endpoint_2/cloud/endpoint.yml
+++ b/aml_batch_endpoint/endpoint_2/cloud/endpoint.yml
@@ -1,3 +1,3 @@
 $schema: https://azuremlschemas.azureedge.net/latest/batchEndpoint.schema.json
-name: endpoint-batch-mlflow-2
+name: endpoint-batch-2
 auth_mode: aad_token
