Updated structure of project.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,36 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Python: Current Module",
+      "name": "Train endpoint 1 locally",
       "type": "python",
       "request": "launch",
-      "module": "${command:extension.commandvariable.file.relativeFileDotsNoExtension}"
+      "program": "${workspaceFolder}/aml_batch_endpoint/endpoint_1/src/train.py",
+      "console": "integratedTerminal",
+      "justMyCode": true
+    },
+    {
+      "name": "Test endpoint 1 locally",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/aml_batch_endpoint/endpoint_1/src/score_local.py",
+      "console": "integratedTerminal",
+      "justMyCode": true
+    },
+    {
+      "name": "Train endpoint 2 locally",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/aml_batch_endpoint/endpoint_2/src/train.py",
+      "console": "integratedTerminal",
+      "justMyCode": true
+    },
+    {
+      "name": "Generate test data",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/aml_batch_endpoint/test_data/generate_images.py",
+      "console": "integratedTerminal",
+      "justMyCode": true
     },
   ]
 }
